@@ -106,7 +106,6 @@ def _findProductForPath(path, subdir=None):
 class DirectoryInformation:
     data = None
     _v_last_read = 0
-    _v_last_filelist = [] # Only used on Win32
 
     def __init__(self, filepath, reg_key, ignore=ignore):
         self._filepath = filepath
@@ -159,23 +158,13 @@ class DirectoryInformation:
         if not Globals.DevelopmentMode:
             return 0
         mtime=0
-        filelist=[]
         try:
             mtime = os.stat(self._filepath)[8]
-            if platform == 'win32':
-                # some Windows directories don't change mtime
-                # when a file is added to or deleted from them :-(
-                # So keep a list of files as well, and see if that
-                # changes
-                os.path.walk(self._filepath, self._walker, filelist)
-                filelist.sort()
         except:
             logger.exception("Error checking for directory modification")
 
-        if mtime != self._v_last_read or filelist != self._v_last_filelist:
+        if mtime != self._v_last_read:
             self._v_last_read = mtime
-            self._v_last_filelist = filelist
-
             return 1
 
         return 0
